    * Also `dgm::Window` is now marked as `final`
 * Deprecated default constructors for Clip, Window, Path and TileMap
 * Added examples target
    * Build by default, you can use `-D ENABLE_EXAMPLES=OFF` to surpress on configure
    * Examples showcase various features of the library and how to use them

dgm-lib v2.3.1
 * Fixed `WorldNavMesh` internal lookup algorithm, which could produce paths that go through solid walls
 * Fixed `WorldNavMesh` internal lookup algorithm, which could not find path in an empty room
 * Fixed `dgm::App::pushState` stopped working properly after pushed state throwed an exception in constructor

dgm-lib v2.3.0
 * Bumped to SFML v2.6.1
 * Added load helpers to `dgm::Utility` that can be used as load callbacks for `dgm::ResourceManager`
 * Removed `dgm::AbstractController`
 * Removed all deprecated methods
 * Added `getRawData` and `getRawConstData` to `dgm::GenericMesh`
 * Reworked `dgm::App` and `dgm::AppState`
	* There is no longer a restriction about not calling pushState from constructor of AppState derivates. It works now!
	* `isTransparent` and `getClearColor` are no longer virtual methods, they are replaced by `dgm::AppStateConfig`
		* `isTransparent` was broken down into `shouldUpdateUnderlyingState` and `shouldDrawUnderlyingState` - first allows you to specify whether input and update methods should be executed for the state under top state. The second does the same for draw method. If multiple states are transparent in this way, the effect is applied recursively
	* `dgm::AppState::restoreFocus` is now replaced with `restoreFocusImpl`. In addition, `loseFocusImpl` has been added. `dgm::AppState` also has a protected member `hasFocus` to test whether the state is currently the top one or not (only top state has focus). That one, one can test if they are updated because the state is on the top or because the currently top state is transparent.