@@ -5,6 +5,7 @@ dgm-lib v2.4.0
  * Added examples target
     * Build by default, you can use `-D ENABLE_EXAMPLES=OFF` to surpress on configure
     * Examples showcase various features of the library and how to use them
+ * Added `dgm::DynamicBuffer::isEmpty`
 
 dgm-lib v2.3.1
  * Fixed `WorldNavMesh` internal lookup algorithm, which could produce paths that go through solid walls
